--- a/_config.yml
+++ b/_config.yml
@@ -13,13 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Stephen McAteer's data science portfolio
+title: Data science portfolio - Stephen McAteer
 email: s.g.mcateer@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-twitter_username: username
+# twitter_username: username
 github_username: smcateer
 minimal_mistakes_skin: default
 search: true
@@ -53,7 +53,7 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-gist
-  - jekyll-feed
+#  - jekyll-feed
   - jemoji
   - jekyll-include-cache
 
@@ -86,7 +86,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: true
+#      read_time: true
       comments: true
       share: true
       related: true
