--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-gist
-#  - jekyll-feed
+  # - jekyll-feed
   - jemoji
   - jekyll-include-cache
 
@@ -86,8 +86,8 @@ defaults:
     values:
       layout: single
       author_profile: true
-#      read_time: true
-      comments: true
+      read_time: true
+      comments: false
       share: true
       related: true
   # _pages
