--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,6 @@ timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 include:
   - _pages
-  - _includes/head-custom.html # SM added custom head
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
@@ -88,6 +87,7 @@ defaults:
       layout: single
       author_profile: true
       # read_time: true
+      show_date: true
       comments: false
       share: true
       related: true
