--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ author:
   bio    : |
       Father of two, husband of one. Senior Manager, Data Science at the Victorian Auditor-General's Office. PhD in mathematical physics. Long suffering Bombers supporter.
 
-      This blog is a showcase of data science work carried out by me personally and teams I've led ... and a bunch of other random stuff besides.
+      This blog is a showcase of data science work carried out by me and teams I've led ... and a bunch of other random stuff besides.
   links:
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
